fix MR css spacing on everything but theme pages

--- a/scenarioA/css/custom.css
+++ b/scenarioA/css/custom.css
@@ -332,3 +332,9 @@ background-color: #F8F8F8;
 
   text-align: center;
 }
+
+
+.lnkbx {
+
+	margin-top: 15px;
+}
